# PDF-Forensics-Analyzer

./: readme.md
backend/: .gitignore  db.sqlite3  manage.py  pyproject.toml  readme.md
backend/apps/: fixtures.py
backend/apps/documents/: admin.py  apps.py  baseline_sync.py  models.py  storage.py
backend/apps/documents/api/: serializers.py  urls.py  views.py
backend/apps/documents/forensics/: __init__.py  analyzer.py  baseline.py  checks.py  classifier.py  compare.py  extractor.py  report.py  scoring.py  utils.py
backend/apps/documents/migrations/: 0001_initial.py  0002_refactor_document_schema.py  0002_templatedocument.py  0003_alter_templatedocument_options_and_more.py
backend/apps/documents/services/: __init__.py  analysis.py
backend/apps/users/: admin.py  apps.py  auth_views.py  backends.py  models.py  premissions.py  serializers.py  signals.py  urls.py  views.py
backend/apps/users/api/: serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: factories.py  test_admin.py  test_models.py
backend/apps/users/tests/api/: test_openapi.py  test_urls.py  test_views.py
backend/config/: api_router.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/tests/: test_analysis.py
backend/tests/scripts/: run_analysis.py  test_compare_fix.py  test_upload_api.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: auth.ts  (+3 more)
frontend/tests/: example.spec.ts
(+15 files in other folders)
